Add intro section

--- a/FJH23.bib
+++ b/FJH23.bib
@@ -197,8 +197,6 @@
 	Volume = {30},
 	Year = {2008}}
 
-
-
 @book{RobCas10a,
 	Address = {New York},
 	Author = {C. P. Robert and G. Casella},
@@ -8230,3 +8228,11 @@
 	Title = {{M}onte {C}arlo and Quasi-{M}onte {C}arlo Methods in Scientific Computing},
 	Volume = {106},
 	Year = 1995}
+
+@book{Goodfellow-et-al-2016,
+	title={Deep Learning},
+	author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
+	publisher={MIT Press},
+	note={\url{http://www.deeplearningbook.org}},
+	year={2016}
+}
